<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sketch 3D</string>
    
    <string name="action_commit">Commit</string>
    <string name="action_revert">Revert</string>
    <string name="action_undo">Undo</string>
    <string name="action_copy">Copy</string>
    <string name="action_delete">Delete</string>
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_define_surface">Define Surface</string>  
    <string name="action_define_element">Define Element</string>     
    <string name="settings_label">Settings</string>
    <string name="rotation_lock">Rotation Lock</string>
    <string name="define_surface">Define Surface</string>
    <string name="define_element">Define Element</string>
    
    

</resources>
